nlw/share/skin/s3/css/screen.ie.css
@import url('ieStyles.css');

div#buttomButtons div#pageAttribution {
    margin: 5px 5px 0 190px;
    padding: 5px;
}

/* Begin fix {bz: 957} */
html div#contentLeft {
    overflow: hidden;
}

html body#contentPage div#controls div#controlsRight,
html body#settingsPage div#controls div#controlsRight {
    width: 550px !important;
}

/* IE6-only fix for {bz: 1424} - Force alignment to the right */
html body#workSpace div#controls div#controlsRight,
/* IE6-only fix for {bz: 1393} - Force alignment to the right */
html body#dashBoard div#controls div#controlsRight {
    -width: 10px !important;
    white-space: nowrap;
}

/* Fix IE7 top offset shift for controlsRight dashboard buttons */
html body#dashBoard div#controls div#controlsRight ul.level1 li {
    margin-top: -11px;
    -margin-top: 0px;
}
html body#dashBoard div#controls div#controlsRight ul li a {
    vertical-align: top;
}

/* The right-hand controls are always empty during wiki edit. */
html body div#st-edit-mode-container div#controls div#controlsRight {
    width: 10px !important;
}

html div#mainWrap {
    width: expression( (document.body.clientWidth * 0.9 > 950) ? '90%' : '950px' );
}


html body#workSpace div#mainWrap, html body#blog div#mainWrap, html body#dashBoard div#mainWrap {
    width: expression( (document.body.clientWidth * 0.9 > 880) ? '90%' : '880px' );
}

html body#listPage div#mainWrap {
    width: expression( (document.body.clientWidth * 0.9 > 885) ? '90%' : '885px' );
}

/* End fix {bz: 957} */

body {
    behavior: url(/static/skin/s3/javascript/csshover.htc);
}

* html #st-attachments-attach-attachinterface-overlay {
    filter: alpha(opacity=70);
}

* html .popup-overlay {
    filter: alpha(opacity=70);
}


body.st-popup {
    behavior: url(/static/skin/s3/javascript/csshover.htc);
}

#st-refcard {
    behavior: url(/static/skin/s3/javascript/csshover.htc);
}

#wikiwyg_wikitext_textarea,
#wysiwyg-editable-div {
    padding: 5px;
}

div#st-pagetools ul.level2 {
    left: -6.0em !important;
    width: 14em !important;
    top: 17px !important;
}

div#st-pagetools ul li {
    padding-top: 4px !important;
}

div#st-pagetools ul ul li {
    width: 14em !important;
}

/* Remove most of the whitespace between the toolbar and the editing area */

#st-page-editing-toolbar {
    margin-top: 5px !important;
}
 
#st-editing-prefix-container {
    margin-bottom: -35px !important;
}

/* This selector makes for about 2px of blank space on the right side of the
 * popup because IE sucks, we should look in to fixing this. Adding an
 * expression that checks for a scrollbar may fix this.
 */
div#mainNav ul.level2 li {
    width: 18em; 
}

/* These two are not perfect in IE6 because it does not have a max-selector. */
div#mainNav ul ul.level2 {
    max-height: 168px;
    height: auto !important;
    height: 168px;
}

div#mainNav ul ul.level2.withimage {
    max-height: 261px;
    height: auto !important;
    height: 261px;
}

/* Stupid IE6 that doesn't understand '>' */
* html div#mainNav ul.level1 li a {
    background: url(../images/dropdownTick.png) no-repeat center right;
}

* html div#mainNav ul.level2 li a {
    background-image: none;
}

* html div#mainNav ul.level1 li {
    padding-right: 15px;
    background: url(../images/mainNavDivider.png) no-repeat center right;
}

* html div#mainNav ul.level2 li {
    padding-right: 0px;
    background: none;
}

/* IE6-specific hacks to readjust widget header margins */
* html div.widgetHeader a.close {
    -margin-right: 8px;
}

* html div.widgetHeader div.widgetHeaderTitle {
    -margin-top: 7px;
    -margin-left: -20px;
}

* html div.widget div.widgetHeader h4 span {
    /* Make the spaces above widget titles draggable for IE6: {bz: 1323} */
    -padding-top: 9px !important;
    -padding-bottom: 9px !important;
}


/* IE6-specific parts of {bz: 1338} */

body#workSpace div#controls div#st-editing-tools-edit h1,
body#blog div#controls div#st-editing-tools-edit h1,
div#contentContainer h2.tableTitle {
        -width: 100% !important;
}

body#workSpace div#controls div#st-editing-tools-edit,
body#blog div#controls div#st-editing-tools-edit {
        -width: 80% !important;
}

body#blog div#controls div#controlsRight {
        -width: 10% !important;
}

div#contentContainer h2.tableTitle {
        -width: 85% !important;
}

div.postByEmail {
        -display: block;
        -text-align: right !important;
        -width: 100% !important.
}

/* End IE6-specific hack */

html ul.buttonRight ul.level2 {
    left: expression( jQuery('#st-pagetools-newpage').offset().left - 10 );
    top: expression( jQuery('#st-pagetools-newpage').offset().top + 30 );
}

div#mainNav ul.level1 li.submenu:hover {
    display: block;
}


/* This fixes the widget bottoms in IE7 */
div.widget { margin-left: 1px; }
html>body#dashBoard div.widget div.widgetBottomRight,
html>body#contentPage div.widget div.widgetBottomRight,
html>body#settingsPage div.widget div.widgetBottomRight {
        margin-top: 0;
        margin-left: 0;
}
/* This fixes a gap in the widget bottoms in IE6 */
* html body#dashBoard div.widget div.widgetBottom {
        margin-left: 2px;
}
* html body#settingsPage div.widget div.widgetBottom {
        margin-left: 1px;
}
html>body#contentPage div.widget div.widgetBottom {
        margin-left: -1px;
}

/* Give IE6 a reasonable size for widget title that won't cause wrapping */
.widgetHeaderTitleBox {
    -width: 170px;
}

#page-control-category-selector {
    margin-top:0px;
}

/* Micro-tweakage for {bz: 1443} */
table.pagelist.dataTable th div.sort,
table.pagelist.dataTable th div.selectall {
        -margin-top: 5px;
}

/* Micro-tweakage for {bz: 1473} */
#st-tags-listing a.tag_name {
    -width: expression(
        ((this.clientWidth > 190) || this.style.width == '90%')
            ? '90%' : 'auto' 
    )
}

